@@ -40,12 +40,12 @@ body {font-family:'Open Sans', sans-serif; font-size:0.9em; color:#333; line-hei
 
 
 /* HEADINGS */
-h1 {font-size:3.0em; line-height:1.2em;}
-h2 {font-size:2.5em; line-height:1.2em;}
-h3 {font-size:2.0em; line-height:1.5em;}
-h4 {font-size:1.5em; line-height:1.5em;}
-h5 {font-size:1.0em; line-height:2em;}
-h6 {font-size:0.75em; line-height:2em;}
+h1 {font-size:2.25em; line-height:1.5em;}
+h2 {font-size:2.0em; line-height:2em;}
+h3 {font-size:1.75em; line-height:2em;}
+h4 {font-size:1.5em; line-height:2em;}
+h5 {font-size:1.25em; line-height:2.5em;}
+h6 {font-size:1.0em; line-height:2.5em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -62,7 +62,7 @@ cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
-address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #08a0ff;}
+address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
 p {margin:0 0 10px;}
 
 
