@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 3.5
+Version: 3.6
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, widget areas on homepage, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. Enjoy. 
@@ -78,12 +78,12 @@ body {background:#fff; font-family:'Open Sans', sans-serif; font-size:0.9em; col
 
 
 /* HEADINGS */
-h1 {font-size:3.0em; line-height:1.2em;}
-h2 {font-size:2.5em; line-height:1.2em;}
-h3 {font-size:2.0em; line-height:1.5em;}
-h4 {font-size:1.5em; line-height:1.5em;}
-h5 {font-size:1.0em; line-height:2em;}
-h6 {font-size:0.75em; line-height:2em;}
+h1 {font-size:2.25em; line-height:1.5em;}
+h2 {font-size:2.0em; line-height:2em;}
+h3 {font-size:1.75em; line-height:2em;}
+h4 {font-size:1.5em; line-height:2em;}
+h5 {font-size:1.25em; line-height:2.5em;}
+h6 {font-size:1.0em; line-height:2.5em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -100,7 +100,7 @@ cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
-address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #08a0ff;}
+address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
 p {margin:0 0 10px;}
 
 
@@ -132,9 +132,8 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 /* HEADER FIRST LOGO */
 #header-first .logo {width:35%; float:left;}
-#header-first .logo h1 {font-size:2em;}
 #header-first .logo h1 a:hover {text-decoration:none; color:#333;}
-#header-first .logo h2 {padding:0 0 10px; font-style:italic; font-size:1.0em;}
+#header-first .logo h2 {padding:0 0 10px; font-style:italic; font-size:1.25em; line-height:1.5em;}
 #header-first .logo img {padding:0 0 10px;}
 
 
@@ -183,7 +182,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 /* HEADER THIRD SEARCH BAR */
 #header-third .search-form {width:50%; float:right; text-align:right;} 
-#header-third .searchbar-title {width:50%; float:left; color:#fff; margin:8px 0 0; font-size:1.5em;}
+#header-third .searchbar-title {width:50%; float:left; color:#fff; margin:8px 0 0; font-size:1.5em; line-height:1.5em;}
 
 
 /* HEADER THIRD SEARCH BAR INPUTS */
@@ -210,14 +209,14 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px; font-size:1.5em; line-height:1.5em;}
-.page-title-post {clear:both; font-size:1.5em; line-height:1.5em;}
+.page-title {clear:both; padding:0 0 10px; line-height:1.5em;}
+.page-title-post {clear:both; line-height:1.5em;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
-.post-title {clear:both; font-size:1.5em; line-height:1.5em;}
+.post-title {clear:both; line-height:1.5em;}
 .post-title a:hover {color:#333; text-decoration:none;}
 .sticky {clear:both; display:block; text-align:center; color:#fff; background:#08a0ff; margin:0 0 10px; padding:2px 5px;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
@@ -289,7 +288,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:33%; float:right; padding:20px 0 0;}
 .widget {padding:0 0 10px; margin:0 0 20px; border-bottom:1px solid #eee;}
-.widgettitle {margin:0 0 10px; font-size:1.5em;}
+.widgettitle {margin:0 0 10px; font-size:1.5em; line-height:1.5em;}
 
 
 /* FOOTER */
@@ -328,7 +327,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADER */
 	#header-first .logo {width:100%; text-align:center;}
 	#header-first .logo h1 {font-size:2em; text-align:center;}
-	#header-first .logo h2 {padding:0; font-size:1em; text-align:center;}
+	#header-first .logo h2 {padding:0; font-size:1.5em; text-align:center;}
 	#header-first .logo img {padding:0;}
 	#header-second .image-homepage {width:100%; margin:0 0 10px;}
 	#header-second .sidebar-homepage {width:100%; float:left;}
@@ -356,7 +355,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#categories-four .cat-list {width:47%; margin:0 2% 10px 0; padding:10px 1%;}
 
 	/* HEADINGS */
-	.post-title, .page-title, .page-title-post, .searchbar-title, .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
+	.post-title, .page-title, .page-title-post {font-size:1.75em;}
+	.widgettitle, .searchbar-title, .comments-title, .comment-reply-title, .no-comments {font-size:1.5em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
